--- a/src/app/Chat-Bet/custom-select/custom-select.component.scss
+++ b/src/app/Chat-Bet/custom-select/custom-select.component.scss
@@ -2,6 +2,9 @@
   position: relative;
   width: 250px; 
   font-family: Arial, sans-serif;
+  @media (min-width: 900px) and (max-width: 1100px){
+    width: 180px;
+}
 
   @media screen and (max-width: 768px) {
     display: flex;
