--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -129,6 +129,8 @@ h3{
             }
         }
     }
+
+    
     .section-header{
         display: flex;
         justify-content: space-between;
@@ -588,6 +590,51 @@ h3{
         }
 }
 
+    /* Table */
+    .table{
+        display: flex;
+        flex-direction: column;
+        width: 97%;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        border-radius: 50px;
+        padding: 1rem;
+        margin-top: 2rem;
+        font-family: 'Poppins', sans-serif;
+        box-shadow: 0 4px 10px rgba(149, 149, 255, 0.5);
+        font-size: 1.1rem;
+        @media (max-width: 900px){
+            width: 100%;
+        }
+        td{
+            padding: 0.7rem;
+        }
+        th{
+            padding: 0 3rem;
+        }
+        .thtitle {
+            color: #5554F3;
+            font-size: 1.5rem;
+            font-weight: bold;  
+            .feature{
+            text-align: left;
+        }
+        }
+
+        .tdtitle{
+            text-align: left;
+        }
+    }
+
+    .separator {
+        width: 100%;
+        height: 1px;
+        background-color: rgba(204, 204, 204, 0.5);
+        margin: 10px 0; 
+      }
+
+
     /* Third Section */
     .third-flex{
         display: flex;
@@ -644,7 +691,9 @@ h3{
         }
         }
         .frame4{
+            
             top: 0;
+            right: 0;
             width: 100;
             height: auto;
             img{
@@ -745,8 +794,61 @@ h3{
                 button:hover{
                     opacity: 0.5;
                     cursor: pointer;
-                }               
+                }    
+
+                .top-buttons {
+                    display: inline-flex;
+                    background-color: white;
+                    border-radius: 50px;
+                    border: 1px solid #5554F3; 
+                    width: 70%;
+                    padding: 0;
+                    margin: 0;
+                    height: auto;
+                    align-items: stretch;
+                   
+                    button {
+                        width: 100%;
+                     background-color: white; 
+                     color: #5554F3; 
+                     border-radius: 50px; 
+                     cursor: pointer;
+                     transition: all 0.8s ease; 
+                     position: relative;
+                     overflow: hidden;
+                     padding: 10px 20px;
+                     font-size: 18px;
+                     margin-top: 0;
+                     font-weight: 700;
+                     border:none;
+                   }
+                   button.active {
+                    background-color: #5554F3; 
+                    color: white; 
+                  }
+                  button::before {
+                    content: '';
+                    position: absolute;
+                    top: 0;
+                    left: -100%;
+                    width: 100%;
+                    height: 100%;
+                    background-color: #5554F3; 
+                    transition: left 0.3s ease; 
+                    z-index: -1;
+                  }
+                  button.active::before {
+                   left: 0; 
+                 }
+
+                }
+                  
+                  
+                  
+                  
+
 }
+
     /* Fourth Section */
 
     .fourth-section {
